dark theme activated, fixed page padding/margin on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,21 +2,12 @@
 @import "../node_modules/nprogress/nprogress.css";
 
 $spacer-height: 5px;
-
-
-$body-color: white;
-$primary-color: #ff6600;
-$background-color: #f6f6ef;
-$text-primary-color: #000000;
-$text-secondary-color: #828282;
+$body-color: #333a4a;
+$primary-color: #4a3226;
+$background-color:#1F2430;
+$text-primary-color:#fafafa;
+$text-secondary-color: #8c96ac;
 $animation-highlight-color: #59E817;
-
-// $body-color: #333a4a;
-// $primary-color: #4a3226;
-// $background-color:#1F2430;
-// $text-primary-color:#fafafa;
-// $text-secondary-color: #8c96ac;
-// $animation-highlight-color: #59E817;
 
 @mixin font-base { font-family:Verdana, Geneva, sans-serif; font-size:10pt; color: $text-secondary-color; }
 
@@ -26,7 +17,7 @@ $animation-highlight-color: #59E817;
   to { background-color: transparent; }
 }
 
-body { @include font-base; padding: 0; margin: 0; width: 100%; -webkit-text-size-adjust: none; background-color: $body-color; }
+body { @include font-base; width: 100%; -webkit-text-size-adjust: none; background-color: $body-color; }
 .subtext { font-size: 7pt; }
 a:link    { color: $text-primary-color; text-decoration:none; }
 a:visited { color: $text-secondary-color; text-decoration:none; }
@@ -41,7 +32,7 @@ a:visited { color: $text-secondary-color; text-decoration:none; }
   background-color:$background-color; 
 }
 .page-header { 
-  padding:2px 23px; 
+  padding: 2px 23px; 
   margin-bottom: $spacer-height; 
   color: $text-primary-color; 
   font-weight: bold; 
@@ -49,13 +40,14 @@ a:visited { color: $text-secondary-color; text-decoration:none; }
 }
 .page-footer {height:2px; background-color: $primary-color; }
 .row { display: flex; flex-direction: row; margin-bottom: $spacer-height;}
-.rank { text-align: right; vertical-align: top; padding-right: 8px;  width: 22px;}
+.rank { text-align: right; vertical-align: top; padding-right: 8px; min-width: 22px;}
 .info-col { display: flex; flex-direction: column; }
 .visitor-count {font-size: 7pt; text-align: center; margin-bottom: $spacer-height;}
 
 @media only screen
 and (min-width : 100px)
 and (max-width : 750px) {
+  body { padding: 0px; margin: 0px; }
   .page-container { width: 100%; }
   .page-header { font-size: 15px; }
   .rank, .title { font-size: 11pt; line-height: 14pt;  }
